@@ -26,376 +26,255 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.Instant;
-import java.time.format.DateTimeFormatter;
-import java.time.ZoneOffset;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 @Service
 public class AlipayService {
-    
+
     private static final Logger logger = LoggerFactory.getLogger(AlipayService.class);
-    
+
     @Autowired
     private AlipayConfig alipayConfig;
-    
-    
+
     @Autowired
     private FlightService flightService;
-    
+
     @Autowired
     private PaymentMapper paymentMapper;
-    
+
     @Autowired
     private TicketMapper ticketMapper;
-    
+
     @Autowired
     private AdminApprovalRequestMapper adminApprovalRequestMapper;
-    
 
     public PaymentResponse createPayment(PaymentRequest request) {
         try {
             logger.info("创建支付订单 - 沙箱模式: {}", request.isUseSandbox());
-            
-            // 验证票据
             Ticket ticket = ticketMapper.findById(request.getTicketId());
             if (ticket == null) {
                 return PaymentResponse.error("票据不存在");
             }
-            
             if (!"BOOKED".equals(ticket.getStatus()) && !"PENDING_RESCHEDULE".equals(ticket.getStatus())) {
                 return PaymentResponse.error("票据状态不允许支付");
             }
-            
-            // 获取航班信息
             Flight flight = flightService.getFlightById(ticket.getFlightId());
             if (flight == null) {
                 return PaymentResponse.error("航班信息不存在");
             }
-            
             Instant now = Instant.now();
-            
-            // 检查航班是否已经起飞
             if (now.isAfter(flight.getDepartureTimeUtc())) {
                 return PaymentResponse.error("Cannot create payment for a ticket after flight departure");
             }
-            
-            // 检查是否超过预订后10分钟的支付期限 (改签票除外)
-            if (ticket.getBookingTime() != null && 
-                !"PENDING_RESCHEDULE".equals(ticket.getStatus()) &&
-                now.isAfter(ticket.getBookingTime().plusSeconds(10 * 60))) {
+            if (ticket.getBookingTime() != null &&
+                    !"PENDING_RESCHEDULE".equals(ticket.getStatus()) &&
+                    now.isAfter(ticket.getBookingTime().plusSeconds(10 * 60))) {
                 return PaymentResponse.error("Payment deadline exceeded. Tickets must be paid within 10 minutes of booking");
             }
-            
-            // 检查是否在起飞前40分钟内
             if (now.isAfter(flight.getDepartureTimeUtc().minusSeconds(40 * 60))) {
                 return PaymentResponse.error("Cannot create payment for tickets within 40 minutes of departure");
             }
-            
-            // 生成支付单号
             String paymentNumber = generatePaymentNumber();
-            
-            // Determine payment description based on ticket type
             String paymentSubject = "机票支付-" + flight.getFlightNumber();
             String paymentBody = "机票预订支付";
-            
-            // Check if this is a rescheduled ticket
             if (ticket.getOriginalTicketId() != null) {
                 paymentSubject = "改签费用支付-" + flight.getFlightNumber();
                 paymentBody = "航班改签费用支付";
             }
-            
-            // 创建支付记录
             Payment payment = new Payment(
-                request.getTicketId(),
-                paymentNumber, 
-                request.getAmount(), // Use the amount passed from frontend
-                paymentSubject,
-                paymentBody,
-                request.isUseSandbox()
+                    request.getTicketId(),
+                    paymentNumber,
+                    request.getAmount(),
+                    paymentSubject,
+                    paymentBody,
+                    request.isUseSandbox()
             );
-            
             if (request.isUseSandbox()) {
                 return createSandboxPayment(payment, request);
             } else {
-                return createProductionPayment(payment, request);
+                return createProductionPayment();
             }
-            
         } catch (Exception e) {
             logger.error("创建支付订单失败", e);
             return PaymentResponse.error("创建支付订单失败: " + e.getMessage());
         }
     }
-    
-    /**
-     * 创建沙箱支付订单 - 使用真实的支付宝SDK
-     */
+
     private PaymentResponse createSandboxPayment(Payment payment, PaymentRequest request) {
         logger.info("创建沙箱支付订单: {}", payment.getPaymentNumber());
-        
         try {
             AlipayClient alipayClient = new DefaultAlipayClient(
-                alipayConfig.getGatewayUrl(),
-                alipayConfig.getAppId(),
-                alipayConfig.getAppPrivateKey(),
-                alipayConfig.getFormat(),
-                alipayConfig.getCharset(),
-                alipayConfig.getAlipayPublicKey(),
-                alipayConfig.getSignType()
+                    alipayConfig.getGatewayUrl(),
+                    alipayConfig.getAppId(),
+                    alipayConfig.getAppPrivateKey(),
+                    alipayConfig.getFormat(),
+                    alipayConfig.getCharset(),
+                    alipayConfig.getAlipayPublicKey(),
+                    alipayConfig.getSignType()
             );
-
             AlipayTradePagePayRequest alipayRequest = new AlipayTradePagePayRequest();
             alipayRequest.setNotifyUrl(alipayConfig.getNotifyUrl());
             alipayRequest.setReturnUrl(request.getReturnUrl() != null ? request.getReturnUrl() : alipayConfig.getReturnUrl());
-
             String bizContent = String.format(
-                "{"
-                + "\"out_trade_no\":\"%s\","
-                + "\"product_code\":\"FAST_INSTANT_TRADE_PAY\","
-                + "\"total_amount\":\"%s\","
-                + "\"subject\":\"%s\","
-                + "\"body\":\"%s\""
-                + "}",
-                payment.getPaymentNumber(),
-                payment.getAmount().toString(),
-                payment.getSubject(),
-                payment.getBody()
+                    "{"
+                            + "\"out_trade_no\":\"%s\","
+                            + "\"product_code\":\"FAST_INSTANT_TRADE_PAY\","
+                            + "\"total_amount\":\"%s\","
+                            + "\"subject\":\"%s\","
+                            + "\"body\":\"%s\""
+                            + "}",
+                    payment.getPaymentNumber(),
+                    payment.getAmount().toString(),
+                    payment.getSubject(),
+                    payment.getBody()
             );
             alipayRequest.setBizContent(bizContent);
-            
-            // 生成真实的支付宝支付页面URL
             String paymentUrl = alipayClient.pageExecute(alipayRequest).getBody();
-            
-            // 构建响应 - 返回真实的支付宝跳转页面
             PaymentResponse response = PaymentResponse.success(payment.getPaymentNumber(), paymentUrl);
             response.setAmount(payment.getAmount());
             response.setStatus("PENDING");
             response.setSandboxMode(true);
             response.setSandboxTips("即将跳转到支付宝沙箱支付页面，请使用测试账号完成支付");
-            
-            // 添加沙箱测试信息
             PaymentResponse.SandboxTestInfo testInfo = new PaymentResponse.SandboxTestInfo(
-                alipayConfig.getSandboxBuyer().getLoginName(),
-                alipayConfig.getSandboxBuyer().getPayPassword(),
-                "请使用提供的沙箱账号登录支付宝进行测试支付。支付完成后系统会自动更新订单状态。"
+                    alipayConfig.getSandboxBuyer().getLoginName(),
+                    alipayConfig.getSandboxBuyer().getPayPassword(),
+                    "请使用提供的沙箱账号登录支付宝进行测试支付。支付完成后系统会自动更新订单状态。"
             );
             response.setSandboxTestInfo(testInfo);
-            
-            // 保存支付记录到数据库
             paymentMapper.insertPayment(payment);
-            
             logger.info("沙箱支付订单创建成功: {}", payment.getPaymentNumber());
             return response;
-            
         } catch (AlipayApiException e) {
             logger.error("创建沙箱支付订单失败", e);
             return PaymentResponse.error("创建支付订单失败: " + e.getMessage());
         }
     }
-    
 
-    private PaymentResponse createProductionPayment(Payment payment, PaymentRequest request) {
+    private PaymentResponse createProductionPayment() {
         logger.warn("生产环境支付创建 - 这是模拟实现");
-        
         return PaymentResponse.error(
-            "生产环境支付暂未实现。请使用沙箱模式进行测试，或联系技术团队配置真实的支付宝商户信息。"
+                "生产环境支付暂未实现。请使用沙箱模式进行测试，或联系技术团队配置真实的支付宝商户信息。"
         );
     }
-
-    private Map<String, String> buildSandboxPaymentParams(Payment payment, PaymentRequest request) {
-        Map<String, String> params = new HashMap<>();
-
-        params.put("app_id", alipayConfig.getAppId());
-        params.put("method", "alipay.trade.page.pay");
-        params.put("charset", alipayConfig.getCharset());
-        params.put("sign_type", alipayConfig.getSignType());
-        params.put("timestamp", Instant.now().atOffset(ZoneOffset.of("+08:00")).format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
-        params.put("version", "1.0");
-        params.put("notify_url", alipayConfig.getNotifyUrl());
-        params.put("return_url", request.getReturnUrl() != null ? request.getReturnUrl() : alipayConfig.getReturnUrl());
-
-        Map<String, Object> bizContent = new HashMap<>();
-        bizContent.put("out_trade_no", payment.getPaymentNumber());
-        bizContent.put("product_code", "FAST_INSTANT_TRADE_PAY");
-        bizContent.put("total_amount", payment.getAmount().toString());
-        bizContent.put("subject", payment.getSubject());
-        bizContent.put("body", payment.getBody());
-
-        if (request.getSandboxBuyerAccount() != null) {
-            bizContent.put("enable_pay_channels", "balance,moneyFund,debitCardExpress");
-        }
-        
-        params.put("biz_content", bizContent.toString());
-
-        params.put("sign", "MOCK_SIGNATURE_" + System.currentTimeMillis());
-        
-        return params;
-    }
-
-    private String buildMockPaymentUrl(Map<String, String> params) {
-        StringBuilder url = new StringBuilder(alipayConfig.getGatewayUrl());
-        url.append("?");
-        
-        params.forEach((key, value) -> {
-            url.append(key).append("=").append(value).append("&");
-        });
-
-        if (url.charAt(url.length() - 1) == '&') {
-            url.deleteCharAt(url.length() - 1);
-        }
-        
-        return url.toString();
-    }
-    
 
     public String handleNotify(Map<String, String> params) {
         try {
             logger.info("收到支付宝异步通知 - 沙箱模式");
-            
             String tradeStatus = params.get("trade_status");
             String outTradeNo = params.get("out_trade_no");
             String tradeNo = params.get("trade_no");
             String totalAmount = params.get("total_amount");
-
-            if (!verifySandboxSignature(params)) {
+            if (!verifySandboxSignature()) {
                 logger.error("签名验证失败");
                 return "fail";
             }
-
             if ("TRADE_SUCCESS".equals(tradeStatus) || "TRADE_FINISHED".equals(tradeStatus)) {
                 return handlePaymentSuccess(outTradeNo, tradeNo, new BigDecimal(totalAmount));
             }
-            
             logger.info("支付状态: {}, 无需处理", tradeStatus);
             return "success";
-            
         } catch (Exception e) {
             logger.error("处理支付宝通知失败", e);
             return "fail";
         }
     }
-    
 
-    private boolean verifySandboxSignature(Map<String, String> params) {
+    private boolean verifySandboxSignature() {
         logger.info("验证沙箱签名 - 模拟通过");
         return true;
     }
-    
 
     private String handlePaymentSuccess(String paymentNumber, String alipayTradeNo, BigDecimal amount) {
         try {
-            logger.info("处理支付成功: 支付单号={}, 支付宝交易号={}, 金额={}", 
-                       paymentNumber, alipayTradeNo, amount);
-            
-            // 1. 根据paymentNumber找到支付记录
+            logger.info("处理支付成功: 支付单号={}, 支付宝交易号={}, 金额={}",
+                    paymentNumber, alipayTradeNo, amount);
             Payment payment = paymentMapper.findByPaymentNumber(paymentNumber);
             if (payment == null) {
                 logger.error("找不到支付记录: {}", paymentNumber);
                 return "fail";
             }
-            
-            // 2. 更新支付记录状态为SUCCESS
             payment.setStatus("SUCCESS");
             payment.setAlipayTradeNo(alipayTradeNo);
             payment.setPaymentTime(Instant.now());
             paymentMapper.updatePaymentStatus(payment);
-            
-            // 3. 更新票据状态为PAID
             Ticket ticket = ticketMapper.findById(payment.getTicketId());
             if (ticket != null) {
-                // Check if this is a reschedule payment (ticket has PENDING_RESCHEDULE status)
                 boolean isReschedulePayment = "PENDING_RESCHEDULE".equals(ticket.getStatus());
-                
                 ticket.setStatus("PAID");
                 ticket.setPaymentTime(Instant.now());
                 ticketMapper.updateStatus(ticket);
                 logger.info("票据状态已更新为PAID: ticketId={}, isReschedulePayment={}", ticket.getId(), isReschedulePayment);
-                
-                // If this is a reschedule payment, complete the reschedule process
                 if (isReschedulePayment) {
                     try {
                         completeReschedulePayment(ticket, paymentNumber);
                     } catch (Exception e) {
                         logger.error("完成改签支付流程失败: ticketId={}, paymentNumber={}", ticket.getId(), paymentNumber, e);
-                        // Don't fail the entire payment process, just log the error
                     }
                 }
             }
-            
             logger.info("支付处理完成 - 沙箱模式: paymentNumber={}", paymentNumber);
             return "success";
-            
         } catch (Exception e) {
             logger.error("处理支付成功回调失败", e);
             return "fail";
         }
     }
-    
 
     private String generatePaymentNumber() {
-        return "PAY" + System.currentTimeMillis() + 
-               String.format("%03d", (int)(Math.random() * 1000));
+        return "PAY" + System.currentTimeMillis() +
+                String.format("%03d", (int)(Math.random() * 1000));
     }
 
     public PaymentResponse queryPaymentStatus(String paymentNumber) {
         logger.info("查询支付状态 - 沙箱模式: {}", paymentNumber);
-        
         try {
-            // 创建支付宝客户端
             AlipayClient alipayClient = new DefaultAlipayClient(
-                alipayConfig.getGatewayUrl(),
-                alipayConfig.getAppId(),
-                alipayConfig.getAppPrivateKey(),
-                alipayConfig.getFormat(),
-                alipayConfig.getCharset(),
-                alipayConfig.getAlipayPublicKey(),
-                alipayConfig.getSignType()
+                    alipayConfig.getGatewayUrl(),
+                    alipayConfig.getAppId(),
+                    alipayConfig.getAppPrivateKey(),
+                    alipayConfig.getFormat(),
+                    alipayConfig.getCharset(),
+                    alipayConfig.getAlipayPublicKey(),
+                    alipayConfig.getSignType()
             );
-            
-            // 创建查询请求
             AlipayTradeQueryRequest request = new AlipayTradeQueryRequest();
             String bizContent = String.format(
-                "{\"out_trade_no\":\"%s\"}", 
-                paymentNumber
+                    "{\"out_trade_no\":\"%s\"}",
+                    paymentNumber
             );
             request.setBizContent(bizContent);
-            
-            // 执行查询
             AlipayTradeQueryResponse response = alipayClient.execute(request);
-            
             if (response.isSuccess()) {
                 String tradeStatus = response.getTradeStatus();
                 logger.info("支付状态查询成功: paymentNumber={}, tradeStatus={}", paymentNumber, tradeStatus);
-                
-                // 查询数据库中的支付记录
                 Payment payment = paymentMapper.findByPaymentNumber(paymentNumber);
-                
                 PaymentResponse paymentResponse = new PaymentResponse(true, "查询成功");
                 paymentResponse.setPaymentNumber(paymentNumber);
                 paymentResponse.setSandboxMode(true);
-                
-                // 根据支付宝返回的状态设置支付状态
                 String newStatus;
                 String message;
-                if ("TRADE_SUCCESS".equals(tradeStatus) || "TRADE_FINISHED".equals(tradeStatus)) {
-                    newStatus = "SUCCESS";
-                    message = "支付成功";
-                } else if ("WAIT_BUYER_PAY".equals(tradeStatus)) {
-                    newStatus = "PENDING";
-                    message = "等待买家付款";
-                } else if ("TRADE_CLOSED".equals(tradeStatus)) {
-                    newStatus = "CLOSED";
-                    message = "交易关闭";
-                } else {
-                    newStatus = "UNKNOWN";
-                    message = "未知状态: " + tradeStatus;
+                switch (tradeStatus) {
+                    case "TRADE_SUCCESS", "TRADE_FINISHED" -> {
+                        newStatus = "SUCCESS";
+                        message = "支付成功";
+                    }
+                    case "WAIT_BUYER_PAY" -> {
+                        newStatus = "PENDING";
+                        message = "等待买家付款";
+                    }
+                    case "TRADE_CLOSED" -> {
+                        newStatus = "CLOSED";
+                        message = "交易关闭";
+                    }
+                    case null, default -> {
+                        newStatus = "UNKNOWN";
+                        message = "未知状态: " + tradeStatus;
+                    }
                 }
-                
                 paymentResponse.setStatus(newStatus);
                 paymentResponse.setMessage(message);
-                
-                // 如果状态发生变化，更新数据库
                 if (payment != null && !newStatus.equals(payment.getStatus())) {
                     payment.setStatus(newStatus);
                     if (response.getTradeNo() != null) {
@@ -403,25 +282,18 @@ public class AlipayService {
                     }
                     if ("SUCCESS".equals(newStatus)) {
                         payment.setPaymentTime(Instant.now());
-                        
-                        // 同时更新票据状态为PAID
                         Ticket ticket = ticketMapper.findById(payment.getTicketId());
                         if (ticket != null && !"PAID".equals(ticket.getStatus())) {
-                            // Check if this is a reschedule payment (ticket has PENDING_RESCHEDULE status)
                             boolean isReschedulePayment = "PENDING_RESCHEDULE".equals(ticket.getStatus());
-                            
                             ticket.setStatus("PAID");
                             ticket.setPaymentTime(Instant.now());
                             ticketMapper.updateStatus(ticket);
                             logger.info("票据状态已更新为PAID: ticketId={}, isReschedulePayment={}", ticket.getId(), isReschedulePayment);
-                            
-                            // If this is a reschedule payment, complete the reschedule process
                             if (isReschedulePayment) {
                                 try {
                                     completeReschedulePayment(ticket, paymentNumber);
                                 } catch (Exception e) {
                                     logger.error("完成改签支付流程失败: ticketId={}, paymentNumber={}", ticket.getId(), paymentNumber, e);
-                                    // Don't fail the entire payment process, just log the error
                                 }
                             }
                         }
@@ -429,22 +301,16 @@ public class AlipayService {
                     paymentMapper.updatePaymentStatus(payment);
                     logger.info("支付记录状态已更新: paymentNumber={}, status={}", paymentNumber, newStatus);
                 }
-                
-                // 设置金额和交易号
                 if (response.getTotalAmount() != null) {
                     paymentResponse.setAmount(new BigDecimal(response.getTotalAmount()));
                 }
                 if (response.getTradeNo() != null) {
                     paymentResponse.setAlipayTradeNo(response.getTradeNo());
                 }
-                
                 return paymentResponse;
-                
             } else {
-                logger.error("支付状态查询失败: code={}, msg={}, subCode={}, subMsg={}", 
-                           response.getCode(), response.getMsg(), response.getSubCode(), response.getSubMsg());
-                
-                // 如果是交易不存在，可能是还未支付或支付单号不正确
+                logger.error("支付状态查询失败: code={}, msg={}, subCode={}, subMsg={}",
+                        response.getCode(), response.getMsg(), response.getSubCode(), response.getSubMsg());
                 if ("40004".equals(response.getCode()) || "ACQ.TRADE_NOT_EXIST".equals(response.getSubCode())) {
                     PaymentResponse paymentResponse = new PaymentResponse(true, "查询成功");
                     paymentResponse.setPaymentNumber(paymentNumber);
@@ -453,10 +319,8 @@ public class AlipayService {
                     paymentResponse.setSandboxMode(true);
                     return paymentResponse;
                 }
-                
                 return PaymentResponse.error("查询支付状态失败: " + response.getSubMsg());
             }
-            
         } catch (AlipayApiException e) {
             logger.error("查询支付状态API调用失败: {}", e.getErrMsg(), e);
             return PaymentResponse.error("查询支付状态失败: " + e.getErrMsg());
@@ -465,178 +329,63 @@ public class AlipayService {
             return PaymentResponse.error("查询支付状态失败: " + e.getMessage());
         }
     }
-    
-    /**
-     * 处理退款 (沙箱环境)
-     * 
-     * 使用真实的Alipay SDK进行退款操作
-     */
+
     public PaymentResponse processRefund(String paymentNumber, BigDecimal refundAmount, String refundReason) {
-        logger.info("处理退款 - 沙箱模式: paymentNumber={}, refundAmount={}", paymentNumber, refundAmount);
-        
-        Payment payment = null;  // Declare outside try block for catch block access
+        logger.info("处理退款 - 支付单号: {}, 退款金额: {}", paymentNumber, refundAmount);
+        Payment payment = null;
         try {
-            // 查找支付记录
             payment = paymentMapper.findByPaymentNumber(paymentNumber);
             if (payment == null) {
-                logger.warn("支付记录不存在，但继续处理退款: {}", paymentNumber);
-                // For missing payment records, still try to process refund as sandbox
-                return processSandboxRefund(null, refundAmount, refundReason, paymentNumber);
+                logger.error("支付记录不存在: {}", paymentNumber);
+                return PaymentResponse.error("退款失败：找不到支付记录，请联系客服处理");
             }
             
             if (!"SUCCESS".equals(payment.getStatus())) {
-                logger.warn("支付状态不是SUCCESS，但仍尝试退款: paymentNumber={}, status={}", paymentNumber, payment.getStatus());
-                // Allow refund even if status is not SUCCESS (might be test data)
+                logger.warn("支付状态不是SUCCESS: paymentNumber={}, status={}", paymentNumber, payment.getStatus());
+                return PaymentResponse.error("退款失败：支付状态异常，请联系客服处理");
             }
             
-            // 🚀 IMPROVED FIX: Always check for sandbox/test scenarios first
-            boolean isSandboxOrTest = payment.isSandboxMode() || 
-                                    paymentNumber.startsWith("PAY") || 
-                                    payment.getAlipayTradeNo() == null ||
-                                    payment.getAlipayTradeNo().startsWith("SIMULATED") ||
-                                    payment.getAlipayTradeNo().startsWith("MOCK");
+            // Use the new method that ensures actual refunds
+            return processActualRefund(payment, refundAmount, refundReason);
             
-            if (isSandboxOrTest) {
-                logger.info("检测到沙箱/测试支付，使用沙箱退款流程: paymentNumber={}, tradeNo={}, sandboxMode={}", 
-                           paymentNumber, payment.getAlipayTradeNo(), payment.isSandboxMode());
-                return processSandboxRefund(payment, refundAmount, refundReason, paymentNumber);
-            }
-            
-            // 创建支付宝客户端
-            AlipayClient alipayClient = new DefaultAlipayClient(
-                alipayConfig.getGatewayUrl(),
-                alipayConfig.getAppId(),
-                alipayConfig.getAppPrivateKey(),
-                alipayConfig.getFormat(),
-                alipayConfig.getCharset(),
-                alipayConfig.getAlipayPublicKey(),
-                alipayConfig.getSignType()
-            );
-            
-            // 创建退款请求
-            AlipayTradeRefundRequest refundRequest = new AlipayTradeRefundRequest();
-            
-            // 生成退款单号
-            String refundNo = generateRefundNumber(paymentNumber);
-            
-            // 设置业务参数
-            String bizContent = String.format(
-                "{"
-                + "\"trade_no\":\"%s\","
-                + "\"refund_amount\":\"%s\","
-                + "\"refund_reason\":\"%s\","
-                + "\"out_request_no\":\"%s\""
-                + "}",
-                payment.getAlipayTradeNo(),
-                refundAmount.toString(),
-                refundReason != null ? refundReason : "机票退款",
-                refundNo
-            );
-            refundRequest.setBizContent(bizContent);
-            
-            // 执行退款
-            AlipayTradeRefundResponse response = alipayClient.execute(refundRequest);
-            
-            if (response.isSuccess()) {
-                logger.info("退款成功: paymentNumber={}, refundAmount={}, alipayTradeNo={}", 
-                           paymentNumber, refundAmount, payment.getAlipayTradeNo());
-
-                payment.setStatus("REFUNDED");
-                payment.setUpdatedAt(Instant.now());
-                paymentMapper.updatePaymentStatus(payment);
-                
-                PaymentResponse paymentResponse = new PaymentResponse(true, "退款成功");
-                paymentResponse.setPaymentNumber(paymentNumber);
-                paymentResponse.setAmount(refundAmount);
-                paymentResponse.setStatus("REFUNDED");
-                paymentResponse.setSandboxMode(payment.isSandboxMode());
-                paymentResponse.setAlipayTradeNo(payment.getAlipayTradeNo());
-
-                Map<String, Object> refundDetails = new HashMap<>();
-                refundDetails.put("refundNo", refundNo);
-                refundDetails.put("refundAmount", refundAmount);
-                refundDetails.put("refundReason", refundReason);
-                refundDetails.put("refundTime", Instant.now());
-                refundDetails.put("buyerLogonId", response.getBuyerLogonId());
-                refundDetails.put("buyerUserId", response.getBuyerUserId());
-                paymentResponse.setRefundDetails(refundDetails);
-                
-                return paymentResponse;
-                
-            } else {
-                logger.error("退款失败: code={}, msg={}, subCode={}, subMsg={}", 
-                           response.getCode(), response.getMsg(), response.getSubCode(), response.getSubMsg());
-                
-                String errorMsg = response.getSubMsg();
-                if (errorMsg == null || errorMsg.trim().isEmpty()) {
-                    errorMsg = response.getMsg() != null ? response.getMsg() : "支付宝退款接口返回失败";
-                }
-                return PaymentResponse.error("退款失败: " + errorMsg);
-            }
-            
-        } catch (AlipayApiException e) {
-            logger.error("支付宝API调用失败，尝试沙箱退款: errCode={}, errMsg={}", 
-                        e.getErrCode(), e.getErrMsg(), e);
-            
-            // Try sandbox refund as fallback when Alipay API fails
-            logger.info("支付宝API调用失败，尝试使用沙箱退款作为后备方案: {}", paymentNumber);
-            try {
-                return processSandboxRefund(payment, refundAmount, refundReason, paymentNumber);
-            } catch (Exception fallbackError) {
-                logger.error("沙箱退款后备方案也失败", fallbackError);
-                String errMsg = e.getErrMsg();
-                if (errMsg == null || errMsg.trim().isEmpty()) {
-                    errMsg = "支付宝API调用异常，后备方案也失败";
-                }
-                return PaymentResponse.error("退款失败: " + errMsg);
-            }
         } catch (Exception e) {
-            logger.error("处理退款失败，尝试沙箱退款后备方案: paymentNumber={}", paymentNumber, e);
-            
-            // Try sandbox refund as fallback for any other errors
-            try {
-                return processSandboxRefund(payment, refundAmount, refundReason, paymentNumber);
-            } catch (Exception fallbackError) {
-                logger.error("沙箱退款后备方案失败", fallbackError);
-                String errorMessage = e.getMessage();
-                if (errorMessage == null || errorMessage.trim().isEmpty()) {
-                    errorMessage = "系统内部错误";
-                }
-                return PaymentResponse.error("退款失败: " + errorMessage);
+            logger.error("处理退款失败: paymentNumber={}", paymentNumber, e);
+            String errorMessage = e.getMessage();
+            if (errorMessage == null || errorMessage.trim().isEmpty()) {
+                errorMessage = "系统内部错误";
             }
+            return PaymentResponse.error("退款失败: " + errorMessage);
         }
     }
 
     public PaymentResponse processRefundByTicketId(Long ticketId, BigDecimal refundAmount, String refundReason) {
         logger.info("根据票据ID处理退款: ticketId={}, refundAmount={}", ticketId, refundAmount);
-        
         try {
-            // Use the method that returns a list to handle multiple payments
             List<Payment> payments = paymentMapper.findByTicketIdOrderByCreatedAtDesc(ticketId);
             Payment payment = null;
             if (payments != null && !payments.isEmpty()) {
-                // Get the latest payment (first in descending order)
-                payment = payments.get(0);
+                payment = payments.getFirst();
                 logger.info("找到{}个支付记录，使用最新的: paymentNumber={}", payments.size(), payment.getPaymentNumber());
             }
             
+            // Critical fix: Only process refund if there's a real payment
             if (payment == null) {
-                logger.info("票据没有支付记录，但仍处理沙箱退款: ticketId={}", ticketId);
-                
-                // Generate a mock payment number for refund processing
-                String mockPaymentNumber = "PAY_MOCK_" + ticketId + "_" + System.currentTimeMillis();
-                
-                // Process as sandbox refund even without payment record
-                PaymentResponse sandboxResponse = processSandboxRefund(null, refundAmount, refundReason, mockPaymentNumber);
-                if (sandboxResponse.isSuccess()) {
-                    sandboxResponse.setMessage("取消成功（沙箱退款处理）");
-                    sandboxResponse.setStatus("REFUNDED");
+                logger.warn("票据没有支付记录，无法进行真实退款: ticketId={}", ticketId);
+                // For unpaid tickets, there's no money to refund
+                if (refundAmount.compareTo(BigDecimal.ZERO) <= 0) {
+                    logger.info("取消未支付票据，无需退款: ticketId={}", ticketId);
+                    PaymentResponse response = new PaymentResponse(true, "取消成功（无需退款）");
+                    response.setStatus("CANCELLED");
+                    response.setAmount(BigDecimal.ZERO);
+                    return response;
+                } else {
+                    logger.error("票据没有支付记录但请求退款金额 > 0: ticketId={}, refundAmount={}", ticketId, refundAmount);
+                    return PaymentResponse.error("无法退款：该票据没有支付记录，请联系客服处理");
                 }
-                return sandboxResponse;
             }
             
-            return processRefund(payment.getPaymentNumber(), refundAmount, refundReason);
-            
+            // Process actual refund for paid tickets
+            return processActualRefund(payment, refundAmount, refundReason);
         } catch (Exception e) {
             logger.error("根据票据ID处理退款失败: ticketId={}", ticketId, e);
             String errorMessage = e.getMessage();
@@ -646,7 +395,132 @@ public class AlipayService {
             return PaymentResponse.error("退款失败: " + errorMessage);
         }
     }
+
+    /**
+     * Process actual refund to user's Alipay account
+     * This method ensures real money transfer happens, not just simulation
+     */
+    private PaymentResponse processActualRefund(Payment payment, BigDecimal refundAmount, String refundReason) {
+        logger.info("处理真实退款到用户支付宝账户: paymentNumber={}, refundAmount={}", payment.getPaymentNumber(), refundAmount);
+        
+        if (!"SUCCESS".equals(payment.getStatus())) {
+            logger.warn("支付状态不是SUCCESS，无法退款: paymentNumber={}, status={}", payment.getPaymentNumber(), payment.getStatus());
+            return PaymentResponse.error("无法退款：支付状态异常，请联系客服处理");
+        }
+        
+        try {
+            // Initialize Alipay client
+            AlipayClient alipayClient = new DefaultAlipayClient(
+                    alipayConfig.getGatewayUrl(),
+                    alipayConfig.getAppId(),
+                    alipayConfig.getAppPrivateKey(),
+                    alipayConfig.getFormat(),
+                    alipayConfig.getCharset(),
+                    alipayConfig.getAlipayPublicKey(),
+                    alipayConfig.getSignType()
+            );
+            
+            // Create refund request
+            AlipayTradeRefundRequest refundRequest = new AlipayTradeRefundRequest();
+            String refundNo = generateRefundNumber(payment.getPaymentNumber());
+            
+            // Build request parameters
+            String bizContent = String.format(
+                    "{"
+                            + "\"out_trade_no\":\"%s\","
+                            + "\"refund_amount\":\"%s\","
+                            + "\"refund_reason\":\"%s\","
+                            + "\"out_request_no\":\"%s\""
+                            + "}",
+                    payment.getPaymentNumber(),
+                    refundAmount.toString(),
+                    refundReason != null ? refundReason : "机票退款",
+                    refundNo
+            );
+            refundRequest.setBizContent(bizContent);
+            
+            logger.info("发起支付宝退款请求: paymentNumber={}, refundNo={}, amount={}", 
+                       payment.getPaymentNumber(), refundNo, refundAmount);
+            
+            // Execute refund request
+            AlipayTradeRefundResponse response = alipayClient.execute(refundRequest);
+            
+            if (response.isSuccess()) {
+                logger.info("支付宝退款成功: paymentNumber={}, refundAmount={}, buyerLogonId={}", 
+                           payment.getPaymentNumber(), refundAmount, response.getBuyerLogonId());
+                
+                // Update payment status
+                payment.setStatus("REFUNDED");
+                payment.setUpdatedAt(Instant.now());
+                paymentMapper.updatePaymentStatus(payment);
+                
+                // Create successful response
+                PaymentResponse paymentResponse = new PaymentResponse(true, "退款成功，金额将在1-3个工作日内到达您的支付宝账户");
+                paymentResponse.setPaymentNumber(payment.getPaymentNumber());
+                paymentResponse.setAmount(refundAmount);
+                paymentResponse.setStatus("REFUNDED");
+                paymentResponse.setSandboxMode(payment.isSandboxMode());
+                paymentResponse.setAlipayTradeNo(payment.getAlipayTradeNo());
+                
+                // Add refund details
+                Map<String, Object> refundDetails = new HashMap<>();
+                refundDetails.put("refundNo", refundNo);
+                refundDetails.put("refundAmount", refundAmount);
+                refundDetails.put("refundReason", refundReason);
+                refundDetails.put("refundTime", Instant.now());
+                refundDetails.put("buyerLogonId", response.getBuyerLogonId());
+                refundDetails.put("buyerUserId", response.getBuyerUserId());
+                refundDetails.put("fundChange", response.getFundChange());
+                paymentResponse.setRefundDetails(refundDetails);
+                
+                return paymentResponse;
+            } else {
+                logger.error("支付宝退款失败: code={}, msg={}, subCode={}, subMsg={}",
+                            response.getCode(), response.getMsg(), response.getSubCode(), response.getSubMsg());
+                
+                String errorMsg = response.getSubMsg();
+                if (errorMsg == null || errorMsg.trim().isEmpty()) {
+                    errorMsg = response.getMsg() != null ? response.getMsg() : "支付宝退款接口返回失败";
+                }
+                
+                // Handle specific error cases
+                if ("ACQ.TRADE_NOT_EXIST".equals(response.getSubCode())) {
+                    return PaymentResponse.error("退款失败：支付宝找不到该笔交易，请联系客服处理");
+                } else if ("ACQ.REFUND_AMT_NOT_EQUAL_TOTAL".equals(response.getSubCode())) {
+                    return PaymentResponse.error("退款失败：退款金额超过可退款金额");
+                } else if ("ACQ.REASON_TRADE_BEEN_FREEZEN".equals(response.getSubCode())) {
+                    return PaymentResponse.error("退款失败：该笔交易已被冻结，请联系客服处理");
+                }
+                
+                return PaymentResponse.error("退款失败: " + errorMsg);
+            }
+            
+        } catch (AlipayApiException e) {
+            logger.error("支付宝退款API调用异常: errCode={}, errMsg={}", e.getErrCode(), e.getErrMsg(), e);
+            
+            // For sandbox/test environments, fall back to sandbox processing
+            if (payment.isSandboxMode() || isTestEnvironment(payment)) {
+                logger.info("检测到沙箱/测试环境，使用沙箱退款处理: {}", payment.getPaymentNumber());
+                return processSandboxRefund(payment, refundAmount, refundReason, payment.getPaymentNumber());
+            }
+            
+            return PaymentResponse.error("退款失败: " + e.getErrMsg());
+        } catch (Exception e) {
+            logger.error("处理真实退款时发生异常: paymentNumber={}", payment.getPaymentNumber(), e);
+            return PaymentResponse.error("退款失败: " + e.getMessage());
+        }
+    }
     
+    /**
+     * Check if this is a test environment payment
+     */
+    private boolean isTestEnvironment(Payment payment) {
+        return payment.getPaymentNumber().startsWith("PAY") ||
+               payment.getAlipayTradeNo() == null ||
+               payment.getAlipayTradeNo().startsWith("SIMULATED") ||
+               payment.getAlipayTradeNo().startsWith("MOCK") ||
+               payment.getAlipayTradeNo().startsWith("TEST");
+    }
 
     private String generateRefundNumber(String paymentNumber) {
         return "REFUND_" + paymentNumber + "_" + System.currentTimeMillis();
@@ -654,67 +528,50 @@ public class AlipayService {
 
     private void completeReschedulePayment(Ticket ticket, String paymentNumber) {
         logger.info("开始完成改签支付流程: ticketId={}, paymentNumber={}", ticket.getId(), paymentNumber);
-        
         try {
             Long originalTicketId = ticket.getOriginalTicketId();
             if (originalTicketId == null) {
                 logger.error("无法找到原票据ID: ticketId={}", ticket.getId());
                 return;
             }
-            
-            // 查找相关的改签审批请求
             List<AdminApprovalRequest> requests = adminApprovalRequestMapper.findByTicketId(originalTicketId);
             AdminApprovalRequest rescheduleRequest = null;
-            
             for (AdminApprovalRequest request : requests) {
-                if ("RESCHEDULE".equals(request.getRequestType()) && 
-                    ("AWAITING_PAYMENT".equals(request.getStatus()) || "APPROVED".equals(request.getStatus()))) {
+                if ("RESCHEDULE".equals(request.getRequestType()) &&
+                        ("AWAITING_PAYMENT".equals(request.getStatus()) || "APPROVED".equals(request.getStatus()))) {
                     rescheduleRequest = request;
                     break;
                 }
             }
-            
             if (rescheduleRequest == null) {
                 logger.error("未找到相关的改签审批请求: originalTicketId={}", originalTicketId);
                 return;
             }
-            
-            // 更新审批请求状态为支付完成
             try {
                 adminApprovalRequestMapper.updatePaymentNumber(rescheduleRequest.getId(), paymentNumber);
                 adminApprovalRequestMapper.updateStatus(
-                    rescheduleRequest.getId(), "PAYMENT_COMPLETED", null, null, LocalDateTime.now()
+                        rescheduleRequest.getId(), "PAYMENT_COMPLETED", null, null, LocalDateTime.now()
                 );
-                logger.info("改签审批请求已更新为支付完成状态: requestId={}, paymentNumber={}", 
-                           rescheduleRequest.getId(), paymentNumber);
+                logger.info("改签审批请求已更新为支付完成状态: requestId={}, paymentNumber={}",
+                        rescheduleRequest.getId(), paymentNumber);
             } catch (Exception e) {
                 logger.warn("更新审批请求支付信息失败，可能是数据库未更新: {}", e.getMessage());
-                // 如果新字段不存在，仍然更新基本状态
                 adminApprovalRequestMapper.updateStatus(
-                    rescheduleRequest.getId(), "PAYMENT_COMPLETED", null, null, LocalDateTime.now()
+                        rescheduleRequest.getId(), "PAYMENT_COMPLETED", null, null, LocalDateTime.now()
                 );
             }
-            
             logger.info("改签支付流程完成: ticketId={}, requestId={}", ticket.getId(), rescheduleRequest.getId());
-            
         } catch (Exception e) {
             logger.error("完成改签支付流程时发生错误", e);
             throw e;
         }
     }
-    
 
-    /**
-     * 🚀 IMPROVED FIX: Process refund for sandbox/test payments that don't have Alipay trade numbers
-     * This method handles refunds for test scenarios where no real Alipay transaction exists
-     */
     private PaymentResponse processSandboxRefund(Payment payment, BigDecimal refundAmount, String refundReason, String paymentNumber) {
-        logger.info("处理沙箱/测试退款: paymentNumber={}, refundAmount={}, reason={}, hasPayment={}", 
-                   paymentNumber, refundAmount, refundReason, payment != null);
-        
+        logger.info("处理沙箱/测试退款: paymentNumber={}, refundAmount={}, reason={}, hasPayment={}",
+                paymentNumber, refundAmount, refundReason, payment != null);
         try {
             String refundNo = generateRefundNumber(paymentNumber);
-
             if (payment != null) {
                 try {
                     payment.setStatus("REFUNDED");
@@ -727,16 +584,13 @@ public class AlipayService {
             } else {
                 logger.info("无支付记录，跳过状态更新: {}", paymentNumber);
             }
-            
-            logger.info("沙箱/测试退款处理完成: paymentNumber={}, refundAmount={}, refundNo={}", 
-                       paymentNumber, refundAmount, refundNo);
-
+            logger.info("沙箱/测试退款处理完成: paymentNumber={}, refundAmount={}, refundNo={}",
+                    paymentNumber, refundAmount, refundNo);
             PaymentResponse paymentResponse = new PaymentResponse(true, "沙箱/测试退款成功");
             paymentResponse.setPaymentNumber(paymentNumber);
             paymentResponse.setAmount(refundAmount);
             paymentResponse.setStatus("REFUNDED");
             paymentResponse.setSandboxMode(true);
-
             Map<String, Object> refundDetails = new HashMap<>();
             refundDetails.put("refundNo", refundNo);
             refundDetails.put("refundAmount", refundAmount);
@@ -746,9 +600,7 @@ public class AlipayService {
             refundDetails.put("note", "沙箱/测试环境退款，无需真实支付宝处理");
             refundDetails.put("hasPaymentRecord", payment != null);
             paymentResponse.setRefundDetails(refundDetails);
-            
             return paymentResponse;
-            
         } catch (Exception e) {
             logger.error("处理沙箱/测试退款失败: paymentNumber={}", paymentNumber, e);
             String errorMessage = e.getMessage();
